mongo/overlays/east1/skupper-proxy-controller.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  name: skupper-proxy-controller
  ownerReferences:
  - apiVersion: apps/v1
    kind: Deployment
    name: skupper-router
    uid: db1f7dc1-e53b-11e9-aadb-1259902b4a92
  selfLink: /apis/extensions/v1beta1/namespaces/skuppman-db/deployments/skupper-proxy-controller
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      application: skupper
      skupper.io/component: proxy-controller
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        application: skupper
        skupper.io/component: proxy-controller
    spec:
      containers:
      - env:
        - name: ICPROXY_SERVICE_ACCOUNT
          value: skupper
        - name: OWNER_NAME
          value: skupper-router
        - name: OWNER_UID
          value: db1f7dc1-e53b-11e9-aadb-1259902b4a92
        - name: SKUPPER_SERVICE_SYNC_ORIGIN
          value: 3X8I40Jlrn
        image: quay.io/skupper/proxy-controller
        imagePullPolicy: Always
        name: proxy-controller
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/messaging/
          name: skupper
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: skupper-proxy-controller
      serviceAccountName: skupper-proxy-controller
      terminationGracePeriodSeconds: 30
      volumes:
      - name: skupper
        secret:
          defaultMode: 420
          secretName: skupper
status: {}
