mongo/overlays/east1/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: qdrouterd
  name: console
  selfLink: /apis/route.openshift.io/v1/namespaces/hello/routes/console
spec:
  host: console.sku-mongo.apps.east-1.sysdeseng.com
  port:
    targetPort: console
  to:
    kind: Service
    name: messaging
    weight: 100
  wildcardPolicy: None
status:
  ingress: []
